# mCRL3

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  cargo_clippy.yml  cargo_deny.yml  doc.yml  nightly.yml  test-miri.yml  test.yml  test_address_sanitizer.yml  test_memory_sanitizer.yml  test_thread_sanitizer.yml
bindings/: CMakeLists.txt
bindings/example/: CMakeLists.txt  main.cpp
bindings/include/mcrl3/: shared_counter.h  shared_mutex.h  string_view.h
crates/aterm/: Cargo.toml
crates/aterm-ffi/: Cargo.toml  cbindgen.toml
crates/aterm/benchmarks/: Cargo.toml
crates/aterm/benchmarks/benches/: benchmark_aterm.rs
crates/aterm/src/: aterm.rs  aterm_binary_stream.rs  aterm_builder.rs  aterm_container.rs  aterm_int.rs  aterm_list.rs  aterm_string.rs  binary_io.rs  busy_forbidden.rs  default_symbols.rs  gc_mutex.rs  global_aterm_pool.rs  global_aterm_storage.rs  global_symbol_pool.rs  lib.rs  markable.rs  parse_term.rs  protected.rs  random_term.rs  shared_term.rs  str_ref.rs  symbol.rs  symbol_pool.rs  thread_aterm_pool.rs  transmutable.rs
crates/aterm/tests/: binary_io.rs  build_tests.rs
crates/aterm/tests/input/: aterm_container_lifetime.rs  aterm_container_lifetime.stderr  aterm_lifetime.rs
crates/cache/: Cargo.toml
crates/data/: Cargo.toml
crates/data/src/: data_expression.rs  data_terms.rs  default_terms.rs  function_symbol.rs  lib.rs  sort_terms.rs
crates/gui/: Cargo.toml
crates/io/: Cargo.toml
crates/io/src/: bitstream.rs  io_aut.rs  lib.rs  line_iterator.rs  parse_numbers.rs  progress.rs  text_utility.rs
crates/io/tests/: test_reduction.rs
crates/ldd/: Cargo.toml
crates/ldd/benchmarks/: Cargo.toml
crates/ldd/benchmarks/benches/: benchmarks_ldd.rs  operations.rs
crates/ldd/src/: format.rs  iterators.rs  lib.rs  operations.rs  storage.rs  test_utility.rs
crates/ldd/src/storage/: cache.rs  ldd.rs
crates/lts/: Cargo.toml
crates/lts/src/: incoming_transitions.rs  io_aut.rs  labelled_transition_system.rs  lib.rs  random_lts.rs
crates/macros/: Cargo.toml
crates/mcrl2-syntax/: Cargo.toml  mcrl2_grammar.pest
crates/number/: Cargo.toml
crates/rec-tests/: Cargo.toml
crates/rec-tests/src/: lib.rs  parse_rec.rs  syntax.rs
crates/rec-tests/tests/: rec_tests.rs
crates/reduction/: Cargo.toml
crates/reduction/src/: block_partition.rs  indexed_partition.rs  lib.rs  quotient.rs  scc_decomposition.rs  signature_refinement.rs  signatures.rs  sort_topological.rs
crates/sabre/: Cargo.toml
crates/sabre/benchmarks/: Cargo.toml
crates/sabre/benchmarks/benches/: benchmark_sabre.rs
crates/sabre/src/: cached_rewriter.rs  innermost_rewriter.rs  lib.rs  naive_rewriter.rs  rewrite_specification.rs  sabre_rewriter.rs  test_utility.rs
crates/sabre/src/matching/: conditions.rs  mod.rs  nonlinear.rs
crates/sabre/src/set_automaton/: automaton.rs  display.rs  match_goal.rs  mod.rs
crates/sabre/src/utilities/: configuration_stack.rs  data_position.rs  data_substitution.rs  innermost_stack.rs  mod.rs  position.rs  semi_compressed_tree.rs  substitution.rs  term_stack.rs
crates/sabre/tests/: parallelism.rs  rewrite_tests.rs
crates/sabre/tests/snapshot/: result_benchexpr20.txt  result_bubblesort100.txt  result_bubblesort20.txt  result_bubblesort720.txt  result_evalexpr.txt  result_hanoi12.txt  result_hanoi16.txt  result_hanoi4.txt  result_hanoi8.txt  result_mergesort10.txt  result_natlist.txt  result_oddeven.txt
crates/sabre_compiling/: Cargo.toml  build.rs
crates/sabre_compiling/sabre_ffi/: Cargo.toml
crates/sabre_compiling/sabre_ffi/src/: export.rs  import.rs  lib.rs
crates/sabre_compiling/src/: indenter.rs  innermost_codegen.rs  lib.rs  library.rs  sabre_compiling.rs
crates/sharedmutex/: Cargo.toml
crates/sharedmutex/benchmarks/: Cargo.toml
crates/sharedmutex/benchmarks/benches/: benchmarks.rs  benchmarks_sharedmutex.rs  mutex_benchmarks.rs  vec_benchmarks.rs
crates/sharedmutex/benchmarks/src/: bf-vec.rs  lib.rs
crates/sharedmutex/src/: bf_sharedmutex.rs  bf_vec.rs  lib.rs  recursive_lock.rs
crates/syntax/: Cargo.toml  mcrl2_grammar.pest
crates/syntax/src/: ast.rs  consume.rs  display_ast.rs  display_pair.rs  grammar.rs  lib.rs  parse.rs  precedence.rs  random.rs  syntax_tree.rs  syntax_tree_display.rs  visitor.rs
crates/syntax/tests/: example_test.rs  grammar_test.rs  syntax_test.rs
crates/typecheck/: Cargo.toml
crates/unsafety/: Cargo.toml
crates/unsafety/src/: block_allocator.rs  counting_allocator.rs  erasable.rs  global_allocator.rs  index_edge.rs  lib.rs  reference_counter.rs  slice_dst.rs  stable_pointer_set.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: arbitrary_utility.rs  bitstream.rs  cast.rs  compressed_vec.rs  debug_trace.rs  display_pair.rs  error.rs  execution_timer.rs  fixed_cache_policy.rs  fixed_size_cache.rs  format.rs  generational_index.rs  global_allocator.rs  indexed_set.rs  lib.rs  macros.rs  no_hasher.rs  number_postfix.rs  parse_numbers.rs  pest_display_pair.rs  progress_meter.rs  protection_set.rs  random_test.rs  safe_index.rs  simple_timer.rs  tagged_index.rs  test_logger.rs  test_utility.rs  text_utility.rs  timer.rs  timing.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: benchmark.rs  coverage.rs  discover_tests.rs  main.rs  package.rs  sanitizer.rs
tools/release/ltsgraph/: Cargo.toml
tools/release/ltsgraph/benchmarks/: Cargo.toml
tools/release/ltsgraph/benchmarks/benches/: benchmark_ltsgraph.rs
tools/release/ltsgraph/src/: grid_subdivision.rs  main.rs  pauseable_thread.rs  wgpu.rs
tools/release/ltsgraph/ui/: application.slint
tools/release/ltsinfo/: Cargo.toml
tools/release/ltsinfo/src/: main.rs
tools/release/ltsview/: Cargo.toml
tools/release/ltsview/src/: lib.rs  main.rs  model.rs
tools/release/ltsview/ui/: application.slint
tools/release/mcrl2rewrite/: Cargo.toml
tools/release/mcrl2rewrite/src/: lib.rs  main.rs  trs_format.rs
tools/release/mcrl3rewrite/: Cargo.toml
tools/release/mcrl3rewrite/src/: lib.rs  main.rs  trs_format.rs
(+837 files in other folders)
