[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2024"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/mCRL3.git"
rust-version = "1.85.0"
version = "0.1.0"

# Introduce a `bench` profile for benchmarks that can be profiled, i.e., has debug info.
[profile.bench]
debug = "line-tables-only"

[workspace]
resolver = "2"
members = [
    "crates/*",
    "crates/**/benchmarks",
    "crates/sabre_compiling/sabre_ffi",
    "tools/release/*",
    "tools/**/benchmarks",
    "tools/**/library"
]

[workspace.dependencies]
ahash = "0.8"
bitstream-io = "2.6"
bitvec = "1.0"
bumpalo = "3.17"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8"
delegate = "0.13"
hashbrown = "0.15.2"
html-escape = "0.2"
itertools = "0.14"
libloading = "0.8"
log = "0.4"
num = "0.4"
once_cell = "1.21"
parking_lot = "0.12"
pest = "2.7"
pest_consume  = "1.1"
pest_derive  = "2.7"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
regex = "1.0"
rustc-hash = "2.1"
sharded-slab = "0.1"
smallvec = "1.14"
streaming-iterator = "0.1"
syn = { version = "2.0", features = ["full"] }
temp-dir = "0.1"
thiserror = "2.0"
tikv-jemallocator = "0.6"
toml = "0.8"

# Used for GUI tools
cosmic-text = "0.13"
glam = "0.30"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
slint = "1.10"
slint-build = "1.10"
tiny-skia = "0.11"
tobj = "4.0"
tokio = { version = "1.44", features = ["rt", "macros"] }
wgpu = "24.0"
winapi = { version = "0.3", features = ["consoleapi"] }

# Only used for xtask
duct = "0.13"
fs_extra = "1.3"
glob = "0.3"

# Used in tests
indoc  = "2.0"
test-case  = "3.3"
test-log = "0.2"
env_logger = "0.11"
trybuild = "1.0"

# Experimental testing
loom = { version = "0.7", features = ["checkpoint"] }

# The workspace libraries.
mcrl3_aterm = { path = "crates/aterm" }
mcrl3_data = { path = "crates/data" }
mcrl3_gui = { path="crates/gui" }
mcrl3_ldd = { path = "crates/ldd" }
mcrl3_lts = { path="crates/lts" }
mcrl3_macros = { path = "crates/macros" }
mcrl3_rec-tests = { path="crates/rec-tests" }
mcrl3_reduction = { path="crates/reduction" }
mcrl3_sabre = { path="crates/sabre" }
mcrl3_sabre-compiling = { path="crates/sabre_compiling" }
mcrl3_sharedmutex = { path="crates/sharedmutex" }
mcrl3_syntax = { path = "crates/syntax" }
mcrl3_unsafety = { path="crates/unsafety" }
mcrl3_utilities = { path = "crates/utilities" }