[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2024"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/mCRL3.git"
rust-version = "1.85.0"
version = "0.1.0"

# Add debug information to the release binaries.
[profile.release]
lto = "fat"
panic = "abort"
debug = "full"

[workspace]
resolver = "2"
members = [
    "3rd-party/*",
    "crates/*",
    "crates/**/benchmarks",
    "crates/sabre_compiling/sabre_ffi",
    "tools/release/*",
    "tools/**/benchmarks",
    "tools/**/library"
]

[workspace.dependencies]
ahash = "0.8"
backtrace = "0.3"
bitstream-io = "4.1"
bumpalo = "3.17"
clap = { version = "4.5", features = ["derive"] }
crossbeam-utils = "0.8"
delegate = "0.13"
env_logger = "0.11"
hashbrown = "0.15"
html-escape = "0.2"
itertools = "0.14"
libloading = "0.8"
log = "0.4"
num = "0.4"
ordered-float = "5.0"
parking_lot = "0.12"
pest = "2.8"
pest_derive  = "2.8"
rand = "0.9"
regex = "1.11"
rustc-hash = "2.1"
smallvec = "1.15"
streaming-iterator = "0.1"
tempfile = "3.20"
thiserror = "2.0"
tikv-jemallocator = "0.6"
toml = "0.8"

# Used for GUI tools
cosmic-text = "0.14"
glam = "0.30"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
slint = "1.11"
slint-build = "1.11"
tiny-skia = "0.11"
tokio = { version = "1.45", features = ["rt", "macros"] }
winapi = { version = "0.3", features = ["consoleapi"] }
femtovg = { version = "0.14", features = ["wgpu"] }
wgpu = "24.0"

# Used in macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Used for xtask
duct = "1.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "7.0"

# Used in tests
indoc  = "2.0"
test-case  = "3.3"
test-log = "0.2"
trybuild = "1.0"

# Used for fuzzing
arbitrary = { version = "1.4", features = ["derive"] }
arbtest = "0.3"
libfuzzer-sys = "0.4"

# Used for formal verification
prusti-contracts = "0.2"
prusti-std = "0.2"

# Used for benchmarks
criterion = { version = "0.6", features = ["html_reports"] }

# The workspace libraries.
mcrl3_aterm = { path = "crates/aterm" }
mcrl3_data = { path = "crates/data" }
mcrl3_gui = { path="crates/gui" }
mcrl3_ldd = { path = "crates/ldd" }
mcrl3_lts = { path="crates/lts" }
mcrl3_macros = { path = "crates/macros" }
mcrl3_rec-tests = { path="crates/rec-tests" }
mcrl3_reduction = { path="crates/reduction" }
mcrl3_sabre = { path="crates/sabre" }
mcrl3_sabre-compiling = { path="crates/sabre_compiling" }
mcrl3_sabre-ffi = { path="crates/sabre_compiling/sabre_ffi" }
mcrl3_sharedmutex = { path="crates/sharedmutex" }
mcrl3_syntax = { path = "crates/syntax" }
mcrl3_unsafety = { path="crates/unsafety" }
mcrl3_utilities = { path = "crates/utilities" }
pest_consume  = { path = "3rd-party/pest_consume" }
pest_consume_macros  = { path = "3rd-party/pest_consume_macros" }