[package]
name = "mcrl3_aterm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mcrl3_utilities.workspace = true
mcrl3_sharedmutex.workspace = true

ahash.workspace = true
hashbrown.workspace = true
log.workspace = true
parking_lot.workspace = true
pest_consume.workspace = true
pest_derive.workspace = true
pest.workspace = true
rand.workspace = true
thiserror.workspace = true