[package]
name = "mcrl3_aterm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# The `mcrl3_miri` feature is used to run miri tests.
mcrl3_miri = []
# The `mcrl3_strict` feature is used to enable the strict mode.
mcrl3_strict = ["parking_lot/deadlock_detection"]

[dependencies]
mcrl3_utilities.workspace = true
mcrl3_sharedmutex.workspace = true
mcrl3_macros.workspace = true

ahash.workspace = true
arbitrary.workspace = true
delegate.workspace = true
hashbrown.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
pest_consume.workspace = true
pest_derive.workspace = true
pest.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true