[package]
name = "mcrl3_data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_syntax.workspace = true
mcrl3_macros.workspace = true
mcrl3_utilities.workspace = true

ahash.workspace = true
indoc.workspace = true

delegate.workspace = true
thiserror.workspace = true
