[package]
name = "mcrl3_lts"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
mcrl3_utilities.workspace = true

bumpalo.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
rustc-hash.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-log.workspace = true