[package]
name = "mcrl3_rec-tests"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_data.workspace = true
mcrl3_sabre.workspace = true

pest.workspace = true
pest_derive.workspace = true
ahash.workspace = true

[dev-dependencies]
test-case.workspace = true
env_logger.workspace = true