[package]
name = "mcrl3_sabre"
authors = ["Maurice Laveaux", "Mark Bouwman"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
mcrl3_debug = []

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_data.workspace = true
mcrl3_utilities.workspace = true

rustc-hash.workspace = true
smallvec.workspace = true
html-escape.workspace = true
ahash.workspace = true
env_logger.workspace = true
log.workspace = true
itertools.workspace = true
rand.workspace = true

[dev-dependencies]
test-case.workspace = true
test-log.workspace = true