[package]
name = "mcrl3_sharedmutex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam.workspace = true

[features]
loom = []

[dev-dependencies]
rand.workspace = true

[target.'cfg(loom)'.dependencies]
loom.workspace = true