[package]
name = "mcrl3_sharedmutex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_utilities.workspace = true

crossbeam-utils.workspace = true
delegate.workspace = true

[dev-dependencies]
rand.workspace = true