[package]
name = "mcrl3_syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_utilities.workspace = true

itertools.workspace = true
log.workspace = true
pest_consume.workspace = true
pest_derive.workspace = true
pest.workspace = true

[dev-dependencies]
indoc.workspace = true
test-case.workspace = true
env_logger.workspace = true