[package]
name = "mcrl3_unsafety"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Enables an allocator that counts additional metrics (but is slower), this disables `mcrl3_jemalloc` and `mcrl3_mimalloc`.
mcrl3_metrics = []

# Feature to enable jemalloc as the global allocator. This feature only works if 
# the `tikv-jemallocator` crate is supported on that platform.
mcrl3_jemalloc = ["dep:tikv-jemallocator"]

# Feature to enable mimalloc as the global allocator.
mcrl3_mimalloc = ["dep:mimalloc"]

# Enables extra debug options to be enabled. Also enables jemalloc debugging.
mcrl3_debug = ["tikv-jemallocator?/debug"]

[dependencies]
mcrl3_utilities.workspace = true

allocator-api2.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true

mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
