[package]
name = "mcrl3_utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[features]
# Enables a counting allocator that keeps track of the number of allocations.
mcrl3_measure-allocs = []

# Feature to enable jemalloc as the global allocator. This feature only works if 
# the `tikv-jemallocator` crate is supported on that platform.
mcrl3_jemalloc = ["dep:tikv-jemallocator"]

# Enables extra debug options to be enabled. Also enables jemalloc debugging.
mcrl3_debug = ["tikv-jemallocator?/debug"]

# Disable logging when miri is enabled since that does not work with isolation mode.
mcrl3_miri = []

[dependencies]
ahash.workspace = true
backtrace.workspace = true
env_logger.workspace = true
hashbrown.workspace = true
log.workspace = true
pest.workspace = true
rand.workspace = true
rustc-hash.workspace = true

tikv-jemallocator = { workspace = true, optional = true }
