[package]
name = "mcrl3_utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[features]
# Disable logging when miri is enabled since that does not work with isolation mode.
mcrl3_miri = []

# Enables extra debug options to be enabled. Also enables jemalloc debugging.
mcrl3_debug = []

[dependencies]
ahash.workspace = true
arbitrary.workspace = true
backtrace.workspace = true
env_logger.workspace = true
hashbrown.workspace = true
log.workspace = true
pest.workspace = true
rand.workspace = true
rustc-hash.workspace = true
