[package]
name = "xtask"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct.workspace = true
fs_extra.workspace = true
glob.workspace = true
human-sort.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
which.workspace = true