[package]
name = "benchmarks_ldd"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_ldd.workspace = true

criterion.workspace = true
rand.workspace = true

[[bench]]
name = "benchmarks_ldd"
harness = false