[package]
name = "benchmarks_sabre"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_data.workspace = true
mcrl3_rec-tests.workspace = true
mcrl3_sabre.workspace = true
mcrl3_utilities.workspace = true

criterion.workspace = true
env_logger.workspace = true
ahash.workspace = true

[[bench]]
name = "benchmark_sabre"
harness = false