[package]
name = "mcrl3_sharedmutex-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3-sharedmutex.workspace = true

[[bench]]
name = "benchmarks"
harness = false
