[package]
name = "benchmarks_sharedmutex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl3_sharedmutex.workspace = true

criterion.workspace = true
rand.workspace = true

[[bench]]
name = "benchmarks_sharedmutex"
harness = false
