[package]
name = "ltsinfo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcrl3_lts.workspace = true
mcrl3_unsafety.workspace = true
mcrl3_utilities.workspace = true
mcrl3_reduction.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true
