[package]
name = "ltsview"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcrl3_gui.workspace = true

env_logger.workspace = true
log.workspace = true
rfd.workspace = true
slint.workspace = true
tokio.workspace = true
wgpu.workspace = true
tobj.workspace = true

[build-dependencies]
slint-build.workspace = true