[package]
name = "mcrl2rewrite"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_sabre.workspace = true
mcrl3_unsafety.workspace = true
mcrl3_rec-tests.workspace = true

ahash.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true