[package]
name = "mcrl3rewrite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcrl3_aterm.workspace = true
mcrl3_data.workspace = true
mcrl3_rec-tests.workspace = true
mcrl3_sabre.workspace = true
mcrl3_unsafety.workspace = true
mcrl3_utilities.workspace = true

ahash.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
